# server/api/openapi.yaml
@@ -301,6 +301,42 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /schedules/{scheduleId}/ics:
+    get:
+      security:
+        - Bearer: []
+      summary: Get schedule in ICS Format
+      parameters:
+        - name: scheduleId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - ics
+                properties:
+                  ics:
+                    type: string
+        403:
+          description: User does not have permission to view the type of data requested
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        404:
+          description: Schedule with specified ID does not exist, or user does not have access to it
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /schedules/{scheduleId}/csv:
     get:
       security:
